# Computational-Intelligence

./: LICENSE.md  README.md  Set_covering.ipynb  pyproject.toml
Set covering/: README.md  Set_covering.ipynb
lab10/: README.md  lab10.ipynb  montecarlo_player.pkl  q_learning_player.pkl
lab2/: README.md  lab2-nim.ipynb
lab9/: README.md  lab9.ipynb
pizza-pub/: README.md  n-friends.ipynb
set-covering/: README.md  set-covering.ipynb
set-covering2/: README.md  best_optimal_solution.txt  best_tradeoff.txt  halloween.ipynb  single-state.ipynb
