[tool.poetry]
name = "CI-2023"
version = "0.1.0"
description = "Computational Intelligence Course Polito"
authors = ["Vitabile"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.1"
scipy = "^1.11.3"
tqdm = "^4.66.1"
jupyter = "^1.0.0"
ipywidgets = "^8.1.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
